--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -3,7 +3,7 @@ loaderVersion="[25,)" #mandatory (24 is current forge version)
 [[mods]] #mandatory
 
 modId="esotericacraft" #mandatory
-version="${0.2}" #mandatory
+version="${0.2_1}" #mandatory
 displayName="Esoterica Craft" #mandatory
 
 description='''
