Added Chest/Sign shops

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,2 +1,8 @@
-#find more of these here: http://http://mcp.thiakil.com
+#find more of these here: http://mcp.thiakil.com
 public net.minecraft.inventory.container.Container field_75149_d #listeners
+public net.minecraft.tileentity.BarrelTileEntity func_190576_q()Lnet/minecraft/util/NonNullList; #getItems
+public net.minecraft.tileentity.ChestTileEntity func_190576_q()Lnet/minecraft/util/NonNullList; #getItems
+public net.minecraft.tileentity.DispenserTileEntity func_190576_q()Lnet/minecraft/util/NonNullList; #getItems
+public net.minecraft.tileentity.HopperTileEntity func_190576_q()Lnet/minecraft/util/NonNullList; #getItems
+public net.minecraft.tileentity.LockableLootTileEntity func_190576_q()Lnet/minecraft/util/NonNullList; #getItems
+public net.minecraft.tileentity.ShulkerBoxTileEntity func_190576_q()Lnet/minecraft/util/NonNullList; #getItems
