+ added "Dampen" rune + added the concept of "RuneObservers" that allow runes to spawn entities that can apply persistent, localized effects + renamed "shopoverride" command to "override" 	- now override overrides all permission based locks in the mod (example, disabling somebody else's "Dampen" rune) + fixed bug where shop info was displayed twice when the player was holding an item in either (or both) hands + spawners now drop themselves if mined with a diamond pickaxe enchanted with Silk Touch & Efficiency V

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -6,3 +6,4 @@ public net.minecraft.tileentity.DispenserTileEntity func_190576_q()Lnet/minecraf
 public net.minecraft.tileentity.HopperTileEntity func_190576_q()Lnet/minecraft/util/NonNullList; #getItems
 public net.minecraft.tileentity.LockableLootTileEntity func_190576_q()Lnet/minecraft/util/NonNullList; #getItems
 public net.minecraft.tileentity.ShulkerBoxTileEntity func_190576_q()Lnet/minecraft/util/NonNullList; #getItems
+public net.minecraft.entity.EntityType func_200712_a(Ljava/lang/String;Lnet/minecraft/entity/EntityType$Builder;)Lnet/minecraft/entity/EntityType; #register
