+ udpated versions + corrected behavior of EsotericaCraft#messagePlayer and EsotericaCraft#messagePlayers when no formattings are specified + combined the "openinventory" and "closeinventory" commands into one (now known as "inventory") + changed wording of shop info to be less ambiguous + fixed Soul Trap crash on dedicated servers (caused by a "client only" method)

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -7,3 +7,4 @@ public net.minecraft.tileentity.HopperTileEntity func_190576_q()Lnet/minecraft/u
 public net.minecraft.tileentity.LockableLootTileEntity func_190576_q()Lnet/minecraft/util/NonNullList; #getItems
 public net.minecraft.tileentity.ShulkerBoxTileEntity func_190576_q()Lnet/minecraft/util/NonNullList; #getItems
 public net.minecraft.entity.EntityType func_200712_a(Ljava/lang/String;Lnet/minecraft/entity/EntityType$Builder;)Lnet/minecraft/entity/EntityType; #register
+public net.minecraft.item.SpawnEggItem field_195987_b #EGGS
