--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '2.8'
+version = '2.8_1'
 group = 'com.darksundev.esotericacraft' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'esotericacraft'
 
