--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -3,7 +3,7 @@ loaderVersion="[25,)" #mandatory (24 is current forge version)
 [[mods]] #mandatory
 
 modId="esotericacraft" #mandatory
-version="${3.1}" #mandatory
+version="${3.1_1}" #mandatory
 displayName="EsotericaCraft" #mandatory
 
 description='''
