Added server utility that, upon killing a player using a Diamond Axe enchanted with Sweeping Edge, will cause the player's head to drop as an item

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -3,7 +3,7 @@ loaderVersion="[28,)" #mandatory (28 is current forge version)
 [[mods]] #mandatory
 
 modId="esotericacraft" #mandatory
-version="${3.5}" #mandatory
+version="${3.5_1}" #mandatory
 displayName="EsotericaCraft" #mandatory
 
 description='''
