+ removed warnings + added blue, green, and yellow pogo stick variants + added Teleporting Arrows + added Weird Potion + added Potion of Blink

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -8,3 +8,4 @@ public net.minecraft.tileentity.LockableLootTileEntity func_190576_q()Lnet/minec
 public net.minecraft.tileentity.ShulkerBoxTileEntity func_190576_q()Lnet/minecraft/util/NonNullList; #getItems
 public net.minecraft.entity.EntityType func_200712_a(Ljava/lang/String;Lnet/minecraft/entity/EntityType$Builder;)Lnet/minecraft/entity/EntityType; #register
 public net.minecraft.item.SpawnEggItem field_195987_b #EGGS
+public net.minecraft.potion.PotionBrewing func_193357_a(Lnet/minecraft/potion/Potion;Lnet/minecraft/item/Item;Lnet/minecraft/potion/Potion;)V #addMix
