- Added ability to require a garnet and/or to prevent enchantments from being stackable with other enchantments for IItemEffects - Added the "/back" command which allows the user to teleport back to their last death location once

--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,9 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '4.0'
+version = '4.0_2'
 group = 'com.darksundev.esotericacraft' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = 'esotericacraft'
+archivesBaseName = 'EsotericaCraft'
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 
