--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -3,7 +3,7 @@ loaderVersion="[28,)" #mandatory (28 is current forge version)
 [[mods]] #mandatory
 
 modId="esotericacraft" #mandatory
-version="${4.0}" #mandatory
+version="${4.0_2}" #mandatory
 displayName="EsotericaCraft" #mandatory
 
 description='''
