Critical fixes to /invsee /vanish command now working

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,4 +1,8 @@
 #find more of these here: http://mcp.thiakil.com
+public net.minecraft.world.server.ChunkManager$EntityTracker
+public net.minecraft.world.server.ChunkManager field_219272_z #entities
+public net.minecraft.world.server.ChunkManager func_219231_b(Lnet/minecraft/entity/Entity;)V # untrack
+public net.minecraft.world.server.ChunkManager func_219210_a(Lnet/minecraft/entity/Entity;)V # track
 public net.minecraft.inventory.container.Container field_75149_d #listeners
 public net.minecraft.tileentity.BarrelTileEntity func_190576_q()Lnet/minecraft/util/NonNullList; #getItems
 public net.minecraft.tileentity.ChestTileEntity func_190576_q()Lnet/minecraft/util/NonNullList; #getItems
