--- a/build.gradle
+++ b/build.gradle
@@ -15,14 +15,18 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-//version = '4.6_1'
-//group = 'com.darksundev.esotericacraft' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-//archivesBaseName = 'EsotericaCraft'
 version = "${mod_version}"
 group = "com.darksundev.${modid}" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "${modid}"
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
+
+repositories{
+    maven {url='https://dist.creeper.host/Sponge/maven'}
+
+    jcenter()
+    mavenCentral()
+}
 
 minecraft {
     // The mappings can be changed at any time, and must be in the following format.
@@ -42,7 +46,7 @@ minecraft {
             workingDirectory project.file('run')
 
             // Recommended logging data for a userdev environment
-            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
+            //property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
             arg "-mixin.config="+archivesBaseName+".mixins.json"
 
             // Recommended logging level for the console
@@ -60,7 +64,7 @@ minecraft {
             arg "-mixin.config="+archivesBaseName+".mixins.json"
 
             // Recommended logging data for a userdev environment
-            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
+            //property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
 
             // Recommended logging level for the console
             property 'forge.logging.console.level', 'debug'
@@ -76,7 +80,7 @@ minecraft {
             workingDirectory project.file('run')
 
             // Recommended logging data for a userdev environment
-            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
+            //property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
 
             // Recommended logging level for the console
             property 'forge.logging.console.level', 'debug'
@@ -130,7 +134,7 @@ jar {
             "Implementation-Version": "${version}",
             "Implementation-Vendor" :"examplemodsareus",
             "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-            "MixinConfigs": "EsotericaCraft.mixins.json"
+            "MixinConfigs": "${modid}.mixins.json"
         ])
     }
 }
@@ -160,5 +164,5 @@ publishing {
 apply plugin: 'org.spongepowered.mixin'
 
 mixin {
-    add sourceSets.main, "EsotericaCraft.refmap.json"
+    add sourceSets.main, "${modid}.refmap.json"
 }
